--- a/Student-Managemen-System-1/src/main/resources/templates/students.html
+++ b/Student-Managemen-System-1/src/main/resources/templates/students.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:fragment="layout(content)">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -18,6 +18,13 @@
      <h1>List Student</h1>
    </div>
    
+   <div class="row">
+   <div class="col-lg-3">
+     <a th:href="@{/student/new}" class="btn btn-primary btn-sm mb-3">Add Student</a>
+   </div>
+   </div>
+   
+   
    <table class="table table-striped table-bordered">
      <thead class="table-dark">
        <tr>
@@ -31,7 +38,7 @@
      
      
      <tbody>
-       <tr th:each ="student: ${student}">
+       <tr th:each ="student: ${students}">
            <td th:text="${student.firstName}"></td>
            <td th:text="${student.lastName}"></td>
             <td th:text="${student.email}"></td>
