--- a/Student-Managemen-System-1/src/main/resources/templates/create_student.html
+++ b/Student-Managemen-System-1/src/main/resources/templates/create_student.html
@@ -6,20 +6,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" 
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
+    crossorigin="anonymous">
    
    <title>Student management system</title>
-
 </head>
 <body>
+
   <div class="container">
-   <div class="row">
-    <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-centre card"> 
-    
+   <div class= "row">
+    <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card"> 
+      <h1 class="text-center"> create  New Student</h1>
      
-    
+     <div class= "card-body">
      
-    </div>
+      <form th:action="@{/students}" th:object= "${student}" method="POST">
+      
+        <div class="form-group">
+        <label>Student First Name</label>
+         <input type="text" 
+         name="firstName"
+          th:field="*{firstName}" 
+         class="form-control"
+         placeholder="Enter first name"/>
+        </div>
+      
+      
+        <div class="form-group">
+         <label>Student Last Name</label>
+         <input type="text"
+          name="lastName"
+           th:field="*{lastName}" 
+         class="form-control"
+         placeholder="Enter last name"/>
+        </div>
+        
+        
+      <div class="form-group">
+         <label>Student Email</label>
+         <input type="text" name="email" th:field="*{email}" 
+         class="form-control"
+         placeholder="Enter email"/>
+        </div>
+      
+      <div class="box-footer">
+       <button type="submit" class="btn btn-primary">submit</button>
+      </div>
+      
+     </form>
+     
+     
+     </div> 
+     </div>
     </div>
    </div>
 
