--- a/Student-Managemen-System-1/src/main/resources/templates/students.html
+++ b/Student-Managemen-System-1/src/main/resources/templates/students.html
@@ -13,6 +13,31 @@
 </head>
 <body>
 
+<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+  <!-- Brand -->
+  <a class="navbar-brand" href="#">Student Management System</a>
+   
+   <!-- Toggler/collapsibe Button -->
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <!-- Navbar links -->
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" th:href="@{/students}">Student managment</a>
+      </li>
+      
+    </ul>
+  </div>
+</nav>
+<!-- nav baar end -->
+<br>
+<br>
+
+
+
  <div class="container">
    <div class="row">
      <h1>List Student</h1>
@@ -42,6 +67,12 @@
            <td th:text="${student.firstName}"></td>
            <td th:text="${student.lastName}"></td>
             <td th:text="${student.email}"></td>
+            <td>
+             <a th:href = "@{/students/edit/{id}(id= ${student.id})}" 
+             class=" btn btn-primary"> Update </a>
+            
+            </td>
+            
        </tr>
      
      </tbody>
